--- a/hugo.toml
+++ b/hugo.toml
@@ -1,10 +1,15 @@
-baseurl = "/"
+baseurl = "https://brandonirizarry.github.io/blog"
 languageCode = "en-us"
 pagination.pagerSize = 5
 
 # Required for Chroma and the custom syntax highlighting.
 [markup.highlight]
   noClasses = false
+
+[markup.goldmark.renderer]
+  # Set to 'true', to ensure that Ox Hugo's supplied TOC bears the
+  # heading "Table of Contents".
+  unsafe = false
 
 [params]
   # dir name of your main content (default is `content/posts`).
@@ -39,7 +44,7 @@ pagination.pagerSize = 5
   # readingTime = false # default
 
   # whether to show a table of contents
-  # Toc = true
+  Toc = true
 
   # set title for the table of contents
   # can be overridden in a page's front-matter
@@ -89,7 +94,7 @@ pagination.pagerSize = 5
 
       [languages.en.params.logo]
         logoText = "Some Programs"
-        logoHomeLink = "/"
+        logoHomeLink = "/blog"
 
       [languages.en.menu]
         [[languages.en.menu.main]]
