--- a/hugo.toml
+++ b/hugo.toml
@@ -93,19 +93,24 @@ pluralizelisttitles = false
       minuteReadingTime = "min read"
       words = "words"
 
-      [languages.en.params.logo]
-        logoText = "Some Programs"
-        logoHomeLink = "/"
+    [languages.en.params.logo]
+      logoText = "Some Programs"
+      logoHomeLink = "/"
 
-      [languages.en.menu]
-        [[languages.en.menu.main]]
+    [languages.en.menu]
+      [[languages.en.menu.main]]
           identifier = "about"
           name = "About"
           url = "/about"
-        [[languages.en.menu.main]]
+      [[languages.en.menu.main]]
           identifier = "projects"
           name = "Projects"
           url = "/projects"
+      [[languages.en.menu.main]]
+          identifier = "blog"
+          name = "Blog"
+          url = "/posts"
+          
 
 [module]
   # In case you would like to make changes to the theme and keep it locally in you repository,
